[package]
name = "pie"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pie"

[features]
default = []
mainnet = ["wormhole-solana-consts/mainnet"]
testnet = ["wormhole-solana-consts/testnet"]
devnet = [
    "raydium-amm-cpi/devnet",
    "raydium-cpmm-cpi/devnet",
    "raydium-clmm-cpi/devnet",
]
localnet = ["wormhole-solana-consts/localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }

raydium-amm-cpi = { path = "../../modules/amm-cpi", features = [
    "no-entrypoint",
    "cpi",
] }

raydium-cpmm-cpi = { path = "../../modules/cpmm-cpi", features = [
    "no-entrypoint",
    "cpi",
] }

raydium-clmm-cpi = { path = "../../modules/clmm-cpi", features = [
    "no-entrypoint",
    "cpi",
] }

wormhole-raw-vaas = { version = "0.3.0-alpha.1" }
wormhole-solana-consts = { version = "0.3.0-alpha.1" }
wormhole-solana-utils = { version = "0.3.0-alpha.1" }
wormhole-query-sdk = { git = "https://github.com/wormholelabs-xyz/wormhole-query-sdk-rust", version = "0.0.1", rev = "0f34cb470f4e3137b53aa91adcbb0c7def280925" }
hex = "0.4.3"
